<?xml version="1.0"?>
<!--
  Copyright (C) 2018-2021 LEIDOS.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not
  use this file except in compliance with the License. You may obtain a copy of
  the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  License for the specific language governing permissions and limitations under
  the License.
-->
<package format="3">
  <name>carma_base</name>
  <version>3.4.0</version>
  <description>A metapackage to install the dependencies for CARMA</description>
  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache 2.0</license>

  <depend>bondcpp</depend>
  <depend>boost</depend>
  <depend>catkin</depend>
  <depend>class_loader</depend>
  <depend>cmake</depend>
  <depend>cmake_modules</depend>
  <depend>cpp_common</depend>
  <depend>diagnostic_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>genmsg</depend>
  <depend>genpy</depend>
  <depend>glut</depend>
  <depend>gtest</depend>
  <depend>libx11-dev</depend>
  <depend>message_filters</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nav_msgs</depend>
  <depend>nodelet</depend>
  <depend>python3-nose</depend>
  <depend>python3-rospkg</depend>
  <depend>python3-yaml</depend>
  <depend>rosbag</depend>
  <depend>rosbag_storage</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>roscpp_serialization</depend>
  <depend>rosgraph_msgs</depend>
  <depend>roslaunch</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>rostest</depend>
  <depend>rosunit</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>topic_tools</depend>
  <depend>visualization_msgs</depend>
</package>
