<?xml version="1.0"?>
<!--
  Copyright (C) 2018-2021 LEIDOS.

  Licensed under the Apache License, Version 2.0 (the "License"); you may not
  use this file except in compliance with the License. You may obtain a copy of
  the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
  WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
  License for the specific language governing permissions and limitations under
  the License.
-->
<package format="3">
  <name>carma_base</name>
  <version>3.4.0</version>
  <description>A metapackage to install the dependencies for CARMA</description>
  <maintainer email="carma@dot.gov">carma</maintainer>
  <license>Apache 2.0</license>

  <!-- ROS 1 specific dependencies -->
  <depend condition="$ROS_VERSION == 1">bondcpp</depend>
  <depend condition="$ROS_VERSION == 1">camera_calibration</depend>
  <depend condition="$ROS_VERSION == 1">class_loader</depend>
  <depend condition="$ROS_VERSION == 1">cmake_modules</depend>
  <depend condition="$ROS_VERSION == 1">controller_manager</depend>
  <depend condition="$ROS_VERSION == 1">cpp_common</depend>
  <depend condition="$ROS_VERSION == 1">dataspeed_ulc_can</depend>
  <depend condition="$ROS_VERSION == 1">dbw_mkz_msgs</depend>
  <depend condition="$ROS_VERSION == 1">effort_controllers</depend>
  <depend condition="$ROS_VERSION == 1">eigen_conversions</depend>
  <depend condition="$ROS_VERSION == 1">gazebo_ros_control</depend>
  <depend condition="$ROS_VERSION == 1">genmsg</depend>
  <depend condition="$ROS_VERSION == 1">genpy</depend>
  <depend condition="$ROS_VERSION == 1">grid_map_msgs</depend>
  <depend condition="$ROS_VERSION == 1">grid_map_ros</depend>
  <depend condition="$ROS_VERSION == 1">grid_map_visualization</depend>
  <depend condition="$ROS_VERSION == 1">gps_common</depend>
  <depend condition="$ROS_VERSION == 1">image_proc</depend>
  <depend condition="$ROS_VERSION == 1">image_view2</depend>
  <depend condition="$ROS_VERSION == 1">imu_filter_madgwick</depend>
  <depend condition="$ROS_VERSION == 1">imu_tools</depend>
  <depend condition="$ROS_VERSION == 1">joint_state_controller</depend>
  <depend condition="$ROS_VERSION == 1">jsk_recognition_msgs</depend>
  <depend condition="$ROS_VERSION == 1">jsk_recognition_utils</depend>
  <depend condition="$ROS_VERSION == 1">jsk_rviz_plugins</depend>
  <depend condition="$ROS_VERSION == 1">jsk_topic_tools</depend>
  <depend condition="$ROS_VERSION == 1">nodelet</depend>
  <depend condition="$ROS_VERSION == 1">position_controllers</depend>
  <depend condition="$ROS_VERSION == 1">python_qt_binding</depend>
  <depend condition="$ROS_VERSION == 1">rosbag</depend>
  <depend condition="$ROS_VERSION == 1">rosbag_storage</depend>
  <depend condition="$ROS_VERSION == 1">rosconsole</depend>
  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 1">roscpp_serialization</depend>
  <depend condition="$ROS_VERSION == 1">roslaunch</depend>
  <depend condition="$ROS_VERSION == 1">roslib</depend>
  <depend condition="$ROS_VERSION == 1">roslint</depend>
  <depend condition="$ROS_VERSION == 1">rospy</depend>
  <depend condition="$ROS_VERSION == 1">rostest</depend>
  <depend condition="$ROS_VERSION == 1">rosunit</depend>
  <depend condition="$ROS_VERSION == 1">rqt_gui</depend>
  <depend condition="$ROS_VERSION == 1">rqt_gui_py</depend>
  <depend condition="$ROS_VERSION == 1">rqt_plot</depend>
  <depend condition="$ROS_VERSION == 1">rviz</depend>
  <depend condition="$ROS_VERSION == 1">socketcan_bridge</depend>
  <depend condition="$ROS_VERSION == 1">socketcan_interface</depend>
  <depend condition="$ROS_VERSION == 1">sound_play</depend>
  <depend condition="$ROS_VERSION == 1">swri_math_util</depend>
  <depend condition="$ROS_VERSION == 1">swri_roscpp</depend>
  <depend condition="$ROS_VERSION == 1">swri_serial_util</depend>
  <depend condition="$ROS_VERSION == 1">swri_string_util</depend>
  <depend condition="$ROS_VERSION == 1">swri_nodelet</depend>
  <depend condition="$ROS_VERSION == 1">tablet_socket_msgs</depend>
  <depend condition="$ROS_VERSION == 1">tf</depend>
  <depend condition="$ROS_VERSION == 1">tf_conversions</depend>
  <depend condition="$ROS_VERSION == 1">topic_tools</depend>
  <depend condition="$ROS_VERSION == 1">transmission_interface</depend>
  <depend condition="$ROS_VERSION == 1">vector_map_msgs</depend>
  <depend condition="$ROS_VERSION == 1">velodyne_description</depend>
  <depend condition="$ROS_VERSION == 1">velodyne_gazebo_plugins</depend>
  <depend condition="$ROS_VERSION == 1">velodyne_pcl</depend>
  <depend condition="$ROS_VERSION == 1">xmlrpcpp</depend>

  <!-- Common dependencies that exist in both ROS 1 and ROS 2 -->
  <depend>ackermann_msgs</depend>
  <depend>automotive_navigation_msgs</depend>
  <depend>automotive_platform_msgs</depend>
  <depend>boost</depend>
  <depend>camera_info_manager</depend>
  <depend>can_msgs</depend>
  <depend>carla_msgs</depend>
  <depend>cmake</depend>
  <depend>curl</depend>
  <depend>cv_bridge</depend>
  <depend>diagnostic_aggregator</depend>
  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>eigen</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gtest</depend>
  <depend>image_common</depend>
  <depend>image_geometry</depend>
  <depend>image_transport</depend>
  <depend>joy</depend>
  <depend>libgflags-dev</depend>
  <depend>libglew-dev</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>libopencv-dev</depend>
  <depend>libpcl-all</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-opengl</depend>
  <depend>libqt5-opengl-dev</depend>
  <depend>libqt5-widgets</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>nmea_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>python3-nose</depend>
  <depend>python3-requests</depend>
  <depend>python3-serial</depend>
  <depend>python3-yaml</depend>
  <depend>qtbase5-dev</depend>
  <depend>robot_state_publisher</depend>
  <depend>rosbridge_server</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>stereo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tinyxml</depend>
  <depend>v4l-utils</depend>
  <depend>velocity_controllers</depend>
  <depend>velodyne</depend>
  <depend>velodyne_pointcloud</depend>
  <depend>visualization_msgs</depend>
  <depend>xacro</depend>
  <depend>yaml-cpp</depend>
</package>
